sumo/tests/duarouter/trips/errors/vehicle_empty_arrivallane/errors.duarouter
Error: Invalid arrivallane definition for vehicle ''
Quitting (on error).
